[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.mypy]
python_version = 3.10
ignore_missing_imports = "True"

[tool.poetry]
name = "bluestom-admission-test"
version = "0.1.0"
description = "This project was made as part of the Bluestorm company's adimission test"
authors = ["Pedro Mesquita <pedrodardengo@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.37"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
mypy = "^0.960"
pytest = "^7.1.2"
requests = "^2.27.1"
types-pytz = "^2021.3.8"

[tool.pytest]
args = ['--rootdir=./']
